bump sbt